--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     buildToolsVersion '28.0.3'
 
     defaultConfig {
-        applicationId "es.upm.miw.firebaselogin"
+        applicationId "es.upm.miw.airquality"
         minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
