--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
-
     // Firebase
     implementation 'com.google.firebase:firebase-core:16.0.4'
     //implementation 'com.google.firebase:firebase-core:16.0.3'
@@ -37,6 +36,13 @@ dependencies {
     // https://github.com/firebase/FirebaseUI-Android/tree/master/auth
     //implementation 'com.firebaseui:firebase-ui-auth:4.1.0'
     implementation 'com.firebaseui:firebase-ui-auth:4.2.1'
+
+    // Retrofit
+    compileOnly 'org.glassfish:javax.annotation:3.1.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'org.apache.commons:commons-lang3:3.6'
 }
 
 // Google Services
