--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+
     // Firebase
     implementation 'com.google.firebase:firebase-core:16.0.4'
     //implementation 'com.google.firebase:firebase-core:16.0.3'
