--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
             </intent-filter>
         </activity>
         <activity android:name="es.upm.miw.airquality.LocationsActivity"
+            android:label="@string/activity_locations"
+            />
+        <activity android:name="es.upm.miw.airquality.CityDetail"
             android:label="@string/activity_city_detail"
             />
     </application>
