--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,8 @@
         <activity android:name="es.upm.miw.airquality.LocationsActivity"
             android:label="@string/activity_locations"
             />
-        <activity android:name="es.upm.miw.airquality.CityDetail"
-            android:label="@string/activity_city_detail"
+        <activity android:name="es.upm.miw.airquality.LocationDetail"
+            android:label="@string/activity_location_detail"
             />
     </application>
 
